# payments_integration

./: .dockerignore  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
myplatform/: Dockerfile
myplatform/myplatform/: asgi.py  settings.py  urls.py  wsgi.py
myplatform/payapp/: urls.py
