[project]
name = "payments-integration"
version = "0.1.0"
description = "Payments integration platform. Create, approve, cancel, refund payments."
authors = [
    {name = "Timofey Prokofyev",email = "tryatim8@gmail.com"}
]
readme = "README.md"
requires-python = "==3.12.3"
dependencies = [
    "django (>=5.1.7,<6.0.0)",
    "gunicorn (>=23.0.0,<24.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
